tests/functional2/lang/undefined-var/parse-fail.err.exp
error: undefined variable 'y'
       at /pwd/in.nix:1:4:
            1| x: y
             |    ^
            2|
